# deoptimizer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  mkrelease.sh
.github/workflows/: main.yml  on_demand_build.yml
src/: common.rs  main.rs  options.rs  utils.rs  x86.rs
src/x86/: deoptimizer.rs  helpers.rs  mod.rs  tests.rs  transforms.rs
src/x86_64/: deoptimizer.rs  disassembler.rs  helpers.rs  mod.rs  tests.rs  tracer.rs  transforms.rs  transforms.rs.bak
src/x86_64/transforms/: arithmetic_partitioning.rs  condition_expand.rs  immediate_to_register.rs  logical_inverse.rs  logical_partitioning.rs  mod.rs  offset_mutation.rs  register_swap.rs
