[package]
name = "deoptimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.4.1"
hexdump = "0.1.1"
iced-x86 = "1.20.0"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.50"

# [profile.release]
# rustc-link-lib = ["libkeystone.a"]
# rustc-link-search = ["/usr/lib/"]
# rustc-flags = "-L /lib/"
