[package]
name = "deoptimizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.6"
bitflags = "2.4.1"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
ctrlc = "3.4.1"
hex = "0.4.3"
hexdump = "0.1.1"
iced-x86 = { version = "1.20.0", features = ["code_asm"] }
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.50"

# [profile.release]
# rustc-link-lib = ["libkeystone.a"]
# rustc-link-search = ["/usr/lib/"]
# rustc-flags = "-L /lib/"
